force-app/main/default/objects/LLC_BI__Analyzed_Account__c/LLC_BI__Analyzed_Account__c.object-meta.xml
<CustomObject>
    <label>Analyzed Account</label>
    <nameField>
        <label>Deposit Service  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyzed Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>