force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Account_Reconciliation_Plan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Reconciliation_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Reconciliation Plan</label>
    <type>Checkbox</type>
</CustomField>