force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Account_Serial_Number_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Serial_Number_Range_Start__c</fullName>
    <label>Account Serial Number Range - Start</label>
    <length>30</length>
    <type>Text</type>
</CustomField>