force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Account_Stale_Dating_Calendar_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Stale_Dating_Calendar_Days__c</fullName>
    <label>Account Stale Dating (Calendar Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>