force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__ACH_Pre_Funding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ACH_Pre_Funding_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Pre-Funding Requirement</label>
    <type>Checkbox</type>
</CustomField>