force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Balance_Reporting__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balance_Reporting__c</fullName>
    <label>Balance Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prior Day</fullName>
            </value>
            <value>
                <fullName>Same Day</fullName>
            </value>
            <value>
                <fullName>Controlled Disbursement</fullName>
            </value>
            <value>
                <fullName>Balance Info</fullName>
            </value>
            <value>
                <fullName>BAI Files Transfer</fullName>
            </value>
            <value>
                <fullName>No Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>