force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Book_Transfers__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Book_Transfers__c</fullName>
    <label>Book Transfers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>From</fullName>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>