force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>--DEPRECATED--
        	This field is being deprecated. Use Deposit Reference.</description>
    <label>-D Deposit Account</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Analyzed Accounts</relationshipLabel>
    <relationshipName>Analyzed_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>