force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Deposit_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deposit Account Reference</description>
    <label>Deposit Reference</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Analyzed Accounts (Deposit Reference)</relationshipLabel>
    <relationshipName>Deposit_Service</relationshipName>
    <type>Lookup</type>
</CustomField>