force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Deposit_Ticket_Limit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Ticket_Limit__c</fullName>
    <label>Deposit Ticket Limit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>