force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Electronic_Reporting__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Electronic_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Reporting</label>
    <type>Checkbox</type>
</CustomField>