force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Frequency_of_Issue_Files__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency_of_Issue_Files__c</fullName>
    <label>Frequency of Issue Files</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>