force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Location_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Location_Name__c</fullName>
    <label>Location Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>