force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Master_Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Master_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Master Account for Zero Balance Account</description>
    <inlineHelpText>Check if Master Account for Zero Balance Account</inlineHelpText>
    <label>Master Account</label>
    <type>Checkbox</type>
</CustomField>