force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Maximum_Daily_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Daily_Deposit_Amount__c</fullName>
    <label>Maximum Daily Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>