force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Peg_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Peg_Balance__c</fullName>
    <label>Peg Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>