force-app/main/default/objects/LLC_BI__Analyzed_Account__c/fields/LLC_BI__Percentage_of_Returned_Transactions__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percentage_of_Returned_Transactions__c</fullName>
    <label>Percentage of Returned Transactions</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>